--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -95,9 +95,17 @@
 
                 <div class="side-pics">
 
-                    <img class="side-pic" src="images/product-leggins.jpg">
-                    <img class="side-pic" src="images/product-leggins.jpg">
-                    <img class="side-pic" src="images/product-leggins.jpg">
+                    <div class="side-pic">
+                        <img src="images/product-leggins.jpg">
+                    </div>
+
+                    <div class="side-pic">
+                        <img src="images/product-leggins.jpg">
+                    </div>
+
+                    <div class="side-pic">
+                        <img src="images/product-leggins.jpg">
+                    </div>
 
                 </div>
 
