primer intento de acomodo mvc

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -23,7 +23,7 @@
         <div id="activ-logo">
 
             <a href="/">
-            <img src="images/Activ_logo.png" alt="Activ_logo">
+            <img src="/images/Activ_logo.png" alt="Activ_logo">
             </a>
 
         </div>
@@ -69,7 +69,7 @@
         <div id="slideshow-container">
 
             <div id="slideshow-img">
-                <img src="images/carousel0.jpg" alt="clase-de-yoga">
+                <img src="/images/carousel0.jpg" alt="clase-de-yoga">
             </div>
 
             <div id="slideshow-text">
@@ -86,7 +86,7 @@
             <article class="categoria">
 
                 <div class="foto">
-                    <img src="images/tenis.jpg" alt="tenis">
+                    <img src="/images/tenis.jpg" alt="tenis">
                     <div class="overlay"></div>
                 </div>
                 <p class="titulo-categoria">Tenis</p>
@@ -94,7 +94,7 @@
 
             <article class="categoria">
                 <div class="foto">
-                    <img src="images/ropa.jpg" alt="ropa">
+                    <img src="/images/ropa.jpg" alt="ropa">
                     <div class="overlay"></div>
                 </div>
                 <p class="titulo-categoria">Ropa</p>
@@ -102,7 +102,7 @@
 
             <article class="categoria">
                 <div class="foto">
-                    <img src="images/accesorios.jpg" alt="tenis">
+                    <img src="/images/accesorios.jpg" alt="tenis">
                     <div class="overlay"></div>
                 </div>
                 <p class="titulo-categoria">Accesorios</p>
@@ -129,7 +129,7 @@
                 
                 <a href="/product">
                 <div class="foto-favorito">
-                    <img src="images\product-placeholder.jpg" alt="product">
+                    <img src="/images/product-placeholder.jpg" alt="product">
                 </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
@@ -142,7 +142,7 @@
 
                 <a href="/product">
                 <div class="foto-favorito">
-                    <img src="images\product-placeholder.jpg" alt="product">
+                    <img src="/images/product-placeholder.jpg" alt="product">
                 </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
@@ -155,7 +155,7 @@
 
                 <a href="/product">
                 <div class="foto-favorito">
-                    <img src="images\product-placeholder.jpg" alt="product">
+                    <img src="/images/product-placeholder.jpg" alt="product">
                 </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
@@ -168,7 +168,7 @@
 
                 <a href="/product">
                 <div class="foto-favorito">
-                    <img src="images\product-placeholder.jpg" alt="product">
+                    <img src="/images/product-placeholder.jpg" alt="product">
                 </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
