--- a/src/views/products/productDetail.html
+++ b/src/views/products/productDetail.html
@@ -23,7 +23,7 @@
         <div id="activ-logo">
 
             <a href="/">
-            <img src="images/Activ_logo.png" alt="Activ_logo">
+            <img src="/images/Activ_logo.png" alt="Activ_logo">
             </a>
 
         </div>
@@ -96,22 +96,22 @@
                 <div class="side-pics">
 
                     <div class="side-pic">
-                        <img src="images/product-leggins.jpg">
+                        <img src="/images/product-leggins.jpg">
                     </div>
 
                     <div class="side-pic">
-                        <img src="images/product-leggins.jpg">
+                        <img src="/images/product-leggins.jpg">
                     </div>
 
                     <div class="side-pic">
-                        <img src="images/product-leggins.jpg">
+                        <img src="/images/product-leggins.jpg">
                     </div>
 
                 </div>
 
                 <div class="main-pic">
 
-                    <img src="images/product-leggins.jpg" alt="Leggins">
+                    <img src="/images/product-leggins.jpg" alt="Leggins">
 
                 </div>
 
@@ -222,7 +222,7 @@
                 
                 <a href="/product">
                 <div class="foto-parecido">
-                    <img src="images\product-placeholder.jpg" alt="product">
+                    <img src="/images/product-placeholder.jpg" alt="product">
                 </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
@@ -235,7 +235,7 @@
 
                 <a href="/product">
                 <div class="foto-parecido">
-                    <img src="images\product-placeholder.jpg" alt="product">
+                    <img src="/images/product-placeholder.jpg" alt="product">
                 </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
@@ -248,7 +248,7 @@
 
                 <a href="/product">
                 <div class="foto-parecido">
-                    <img src="images\product-placeholder.jpg" alt="product">
+                    <img src="/images/product-placeholder.jpg" alt="product">
                 </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
@@ -261,7 +261,7 @@
 
                 <a href="/product">
                 <div class="foto-parecido">
-                    <img src="images\product-placeholder.jpg" alt="product">
+                    <img src="/images/product-placeholder.jpg" alt="product">
                 </div>
                 <p class="titulo-producto">Articulo</p>
                 <p class="descripcion-producto">Descripción</p>
