--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -1,68 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>Activ</title>
-    <link rel="icon" href="images/Activ_favicon.png">
 
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-    <link href="/css/normalize.css" rel="stylesheet">
-
-    <link href="/css/headerStyle.css" rel="stylesheet"/>
+    <%- include( "../partials/head" ) %>
     <link href="/css/productStyle.css" rel="stylesheet"/>
-    <link href="/css/footerStyle.css" rel="stylesheet"/>
     
 </head>
 <body>
 
-    <header>
-
-        <div id="activ-logo">
-
-            <a href="/">
-            <img src="/images/Activ_logo.png" alt="Activ_logo">
-            </a>
-
-        </div>
-
-        <nav>
-
-            <div id="hamburger-menu">
-                <i class="fas fa-bars"></i>
-            </div>
-
-            <div id="displayed-menu">
-                <ul>
-                    <li><a href="">Novedades</a></li>
-                    <li><a href="">Mujeres</a></li>
-                    <li><a href="">Hombres</a></li>
-                </ul>
-            </div>
-
-        </nav>
-
-        <div id="side-nav">
-
-            <div id="search-bar">
-
-                <form action="">
-                    <input type="text" placeholder="Buscar" name="search">
-                    <button type="submit"><i class="fa fa-search"></i></button>
-                </form>
-                
-            </div>
-
-            <ul>
-                <li><a href="/login"><i class="fas fa-user"></i></a></li>
-                <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
-            </ul>
-
-        </div>
-
-    </header>
+    <%- include( "../partials/header" ) %>
 
     <main>
 
@@ -329,87 +275,7 @@
 
     </main>
 
-    <footer>
-
-        <div class="footer-top">
-
-            <div id="footer-info" class="footer-nav">
-
-                <p class="foot-info"><a href=""><i class="fas fa-globe-americas"></i>  México</a></p>
-                <p class="foot-info"><a href=""><i class="fas fa-credit-card"></i>  Métodos de pago</a></p>
-                <p class="foot-info"><a href=""><i class="fas fa-paper-plane"></i>  Envíanos un comentario</a></p>
-                
-            </div>
-
-            <div class="footer-nav" id="footer-productos">
-
-                <p class="footer-titulo">PRODUCTOS</p>
-                <ul>
-                    <li class="footer-item"><a href="">Tenis</a></li>
-                    <li class="footer-item"><a href="">Tops</a></li>
-                    <li class="footer-item"><a href="">Bottoms</a></li>
-                    <li class="footer-item"><a href="">Accesorios</a></li>
-                </ul>
-
-            </div>
-
-            <div class="footer-nav" id="footer-asistencia">
-
-                <p class="footer-titulo">ASISTENCIA</p>
-                <ul>
-                    <li class="footer-item"><a href="">Ayuda</a></li>
-                    <li class="footer-item"><a href="">FAQ</a></li>
-                    <li class="footer-item"><a href="">Entregas y devoluciones</a></li>
-                </ul>
-
-            </div>
-
-            <div class="footer-nav" id="footer-promociones">
-
-                <p class="footer-titulo">PROMOCIONES</p>
-                <p class="footer-item">Sé el primero en enterarte de nuestras promociones</p>
-                <form id="inscribir-correo" action="">
-
-                    <div class="footer-correo">
-                        <input type="text" placeholder="Ingresa tu correo">
-                        <button type="submit"><i class="fas fa-share"></i></button>
-                    </div>
-                </form>
-
-            </div>
-
-            <div class="flex" id="footer-redes">
-                
-                <ul>
-                    <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                    <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                </ul>
-                <p class="footer-item">¡Siguenos en nuestras Redes!</p>
-
-            </div>
-
-        </div>
-
-        <div class="footer-bottom">
-        
-            <div class="flex" id="footer-políticas">
-
-                <ul>
-                    <li><a href="">Términos y condiciones</a></li>
-                    <li>|</li>
-                    <li><a href="">Políticas de privacidad</a></li>
-                    <li>|</li>
-                    <li><a href="">Cookies</a></li>
-                </ul>
-            
-            </div>
-
-            <p>© 2021 Activ México S.A. de C.V. Todos los derechos reservados</p>
-
-        </div>
-
-    </footer>
+    <%- include( "../partials/footer" ) %>
     
 </body>
 </html>
