--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 <title>Activ</title>
-<link rel="icon" href="images/Activ_favicon.png">
+<link rel="icon" href="/images/Activ_favicon.png">
 
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
 <link href="/css/normalize.css" rel="stylesheet">
